--- a/app/Resources/views/blog/index.html.twig
+++ b/app/Resources/views/blog/index.html.twig
@@ -6,8 +6,7 @@
     {% for post in posts %}
         <article class="post">
             <h2>
-                {#<a href="{{ path('blog_post', {slug: post.slug}) }}">#}
-                <a href="">
+                <a href="{{ path('blog_post', {slug: post.slug}) }}">
                     {{ post.title }}
                 </a>
             </h2>
