add logout route

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -52,11 +52,11 @@
                         {% endblock %}
 
                         {% if app.user %}
-                            {#<li>#}
-                                {#<a href="{{ path('security_logout') }}">#}
-                                    {#<i class="fa fa-sign-out" aria-hidden="true"></i> {{ 'menu.logout'|trans }}#}
-                                {#</a>#}
-                            {#</li>#}
+                            <li>
+                                <a href="{{ path('security_logout') }}">
+                                    <i class="fa fa-sign-out" aria-hidden="true"></i> {{ 'menu.logout'|trans }}
+                                </a>
+                            </li>
                         {% endif %}
 
                         <li>
