--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>{% block title %}Blog{% endblock %}</title>
-    {#<link rel="alternate" type="application/rss+xml" title="{{ 'rss.title'|trans }}" href="{{ path('blog_rss') }}">#}
     {% block stylesheets %}
         <link rel="stylesheet" href="{{ asset('build/css/app.css') }}">
     {% endblock %}
@@ -37,16 +36,16 @@
 
                         {% block header_navigation_links %}
                             <li>
-                                {#<a href="{{ path('blog_index') }}">#}
-                                    {#<i class="fa fa-home" aria-hidden="true"></i> {{ 'menu.homepage'|trans }}#}
-                                {#</a>#}
+                                <a href="{{ path('blog_index') }}">
+                                    <i class="fa fa-home" aria-hidden="true"></i> {{ 'menu.homepage'|trans }}
+                                </a>
                             </li>
 
                             {% if is_granted('ROLE_ADMIN') %}
                                 <li>
-                                    {#<a href="{{ path('admin_post_index') }}">#}
-                                        {#<i class="fa fa-lock" aria-hidden="true"></i> {{ 'menu.admin'|trans }}#}
-                                    {#</a>#}
+                                    <a href="{{ path('admin_post_index') }}">
+                                        <i class="fa fa-lock" aria-hidden="true"></i> {{ 'menu.admin'|trans }}
+                                    </a>
                                 </li>
                             {% endif %}
                         {% endblock %}
@@ -86,9 +85,14 @@
     {% block body %}
         <div class="row">
             <div id="main" class="col-sm-9">
-                {#{{ include('default/_flash_messages.html.twig') }}#}
+                {{ include('default/_flash_messages.html.twig') }}
 
                 {% block main %}{% endblock %}
+            </div>
+
+            <div id="sidebar" class="col-sm-3">
+                {% block sidebar %}
+                {% endblock %}
             </div>
 
         </div>
